# makcu-rs

./: .gitignore  AGENTS.md  protocol
.github/workflows/: rust.yml
MAKCM_ESP32s3_Pass_Left_IDF/: sdkconfig.defaults
MAKCM_ESP32s3_Pass_Left_IDF/include/: pass_ipc.h
MAKCM_ESP32s3_Pass_Left_IDF/partitions/: partition_MAKCM.csv
MAKCM_ESP32s3_Pass_Left_IDF/src/: CMakeLists.txt  idf_component.yml  ipc.c  pass_usb_device.c
MAKCM_ESP32s3_Pass_Right/boards/: MAKCM.json
MAKCM_ESP32s3_Pass_Right/include/: diag.h  pass_ipc.h
MAKCM_ESP32s3_Pass_Right/src/: diag.cpp  ipc.cpp
MAKCU_AIO_PUBLIC/: config.json  log.txt  main.py
MAKCU_AIO_PUBLIC/modules/: flasher.py  updater.py  usb_name_changer.py
doc/: 00_INDEX.md  01_ARCHITECTURE.md  03_LEFT_MCU.md  04_KM_INJECT.md  06_BUILD_ET_CONFIG.md  07_API_KM.md  08_PIEGES_ET_TODO.md
keyboard-fw/: Makefile  README.md  platformio.ini
keyboard-fw/core/: cfgdesc.c  cfgdesc.h  kbd_inject.c  kbd_inject.h  keymap.c  keymap.h  km_glue.c  km_glue.h  km_protocol.c  km_protocol.h
keyboard-fw/latency-test/: Cargo.toml  README.md  run.csv
keyboard-fw/latency-test/src/: clock.rs  hid.rs  macos_time.rs  main.rs  proto.rs  serial.rs  stats.rs
keyboard-fw/left/: CMakeLists.txt  platformio.ini  sdkconfig.LEFT_KBD_SIGTAP
keyboard-fw/left/src/: CMakeLists.txt  ipc.c  km_platform.c  main.c  pass_usb_device.c  sigtap.c  sigtap.h
keyboard-fw/right/: platformio.ini
keyboard-fw/test/: test_cfgdesc.c  test_framework.h  test_glue.c  test_inject.c  (+3 more)
lib/: README.md
makcu-gui/: Cargo.toml
makcu-gui/src/: main.rs
src/: lib.rs
(+12 files in other folders)
