[package]
name = "makcu-gui"
version = "0.1.0"
edition = "2021"
description = "Graphical test bench for the MAKCU KM protocol, driving the makcu-rs serial library."
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "makcu-gui"
path = "src/main.rs"

[dependencies]
makcu-rs = { path = "../lib-rs" }
eframe = { version = "0.34", default-features = true }
serialport = "4"
parking_lot = "0.12"

[profile.release]
opt-level = 2
